--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true
-  }
+  },
+  "files": [
+    "./src/themes/styled.d.ts",
+  ]
 }
