--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
     "eslint-config-universe": "^7.0.1",
+    "miragejs": "^0.1.41",
     "prettier": "^2.2.1",
     "typescript": "~4.0.0"
   },
